fixed z-index issue with header

--- a/css/components/hero.import.styl
+++ b/css/components/hero.import.styl
@@ -82,7 +82,6 @@ setup-hero($customSettings = {}) {
 	}
 
 	.hero__header {
-		z-index: 100;
 		align-self: flex-start;
 	}
 
@@ -95,6 +94,7 @@ setup-hero($customSettings = {}) {
 	}
 
 	.hero__container {
+		z-index: 99;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -103,7 +103,6 @@ setup-hero($customSettings = {}) {
 	}
 
 	.content {
-		min-height: ($settings.height - 2*$settings.padding);
 		padding: $settings.padding;
 	}
 
